fix: warning "unused manifest key: package.maintenance", add maintenance badge to Cargo.toml. see https://github.com/rust-lang/cargo/issues/7691

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ license = "MIT"
 
 keywords = ["timew", "timewarrior"]
 categories = ["parsing"]
-maintenance = { status = "experimental" }
 
 description = "a simple library to read timewarrior data files"
+
+[badges]
+maintenance = { status = "experimental" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
