--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "master" ]
   schedule:
-    - cron: "* * 27 * *"
+    - cron: "30 5 27 * *"
 
 env:
   CARGO_TERM_COLOR: always
